syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.samohammer.app.proto";

// État global
message AppState {
  repeated UnitEntry units = 1;
  TargetConfig target = 2;
  int32 schema_version = 3;
}

message UnitEntry {
  string id = 1;
  string name = 2;
  bool active = 3;
  repeated AttackProfile profiles = 4;
}

message AttackProfile {
  string id = 1;
  string name = 2;
  AttackType attack_type = 3;

  int32 models = 4;   // Size
  int32 attacks = 5;  // Atk
  int32 to_hit = 6;   // Hit (2..6)
  int32 to_wound = 7; // Wnd (2..6)
  int32 rend = 8;     // Rend (>=0)
  int32 damage = 9;   // Dmg

  bool active = 10;

  // Flags critiques (déclenchés sur 6 naturel)
  bool two_hits = 11; // 2Hits
  bool auto_w = 12;   // AutoW
  bool mortal = 13;   // Mortal
  bool aoa = 14;      // All-out Attack (+1 to Hit, min 2+)
}

message TargetConfig {
  int32 ward_needed = 1;
  bool debuff_hit_enabled = 2;
  int32 debuff_hit_value = 3;
}

enum AttackType {
  MELEE = 0;
  SHOOT = 1;
}
